--- a/package.json
+++ b/package.json
@@ -60,5 +60,10 @@
     "release-to-github-with-changelog": "^1.2.0",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "i18n-loader": "^0.3.0",
+    "moment": "^2.24.0",
+    "retranslate": "^1.0.3"
   }
 }
